# rasterizer

./: Cargo.toml  ideas.txt
src/: image.rs  main.rs  util.rs
src/pipeline/: mod.rs  primitives.rs  rasterization.rs  rendering.rs  util.rs
