[package]
name = "rasterizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.13.1", features = ["debug", "canvas", "image", "tokio"]}
bytes = "1.7.2"
#image = "0.25.2"
chrono = "0.4"
tracing-subscriber = "0.3"